# rait_connector_dummy_portal

./: app.py  architecture_plan.md
rait-phase3/: .env.example  .gitignore  CLAUDE.md  FLOW.md  PHASE2_PLAN.md  PLAN_evaluate_integration.md  README.md  logs_portal.txt  logs_portal_err.txt  logs_registry.txt  logs_registry_err.txt  pyproject.toml
rait-phase3/.claude/agents/: explore-connector.md  integration-verifier.md  observability-auditor.md  schema-designer.md  security-reviewer.md  test-generator.md
rait-phase3/.claude/commands/: scaffold-dashboard.md  scaffold-fastapi.md  setup-db-schema.md  test-api-contracts.md  validate-encryption.md  wire-connector.md
rait-phase3/data/bias/: bias_metric_scores.csv  bias_sample.csv
rait-phase3/data/coherence/: coherence_metric_scores.csv  coherence_sample.csv
rait-phase3/dummy_portal/: config.py  database.py  decryption.py  dependencies.py  main.py  portal.db-wal  portal.sqbpro  telemetry_setup.py
rait-phase3/dummy_portal/ml/: classifier.py
rait-phase3/dummy_portal/models/: schemas.py
rait-phase3/keys/: rsa_public.pem
rait-phase3/mock_registry/: config.py  database.py  key_manager.py  main.py  seed_data.py  state.py
rait-phase3/rait_connector_patches/: README.md  async_wrapper.py  encryptor_v2.py  stub_evaluator.py
rait-phase3/scripts/: check_classifier.py  check_predictions.py  compare_pipelines.py  demo_full_poc.py  demo_phase5.py  generate_keys.py  run_calibration.py  run_evaluation.py  run_telemetry.py
rait-phase3/src/: client.py  config.py  stubs.py
rait-phase3/tests/: conftest.py
(+39 files in other folders)
