[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rait-phase3"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Services
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20",
    # Config
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Crypto
    "cryptography>=42",
    # ML
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    # HTTP (driver scripts)
    "httpx>=0.27",
    "requests>=2.32",
    # Telemetry
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "anyio[trio]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["functional: requires live services (deselect with -m 'not functional')"]
